<resources>
    <string name="app_name">MyFlexibleFragment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="hello_home_fragment">Hello ini Home Fragment</string>
    <string name="to_category">Ke Fragment Category</string>
    <string name="question_singer">Siapa penyanyi terfavorit di dunia</string>
    <string name="charlie_puth">Charlie Puth</string>
    <string name="hrvy_cantwell">Hrvy Cantwell</string>
    <string name="shawn_mendes">Shawn Mendes</string>
    <string name="adam_levine">Adam Levine</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
</resources>